# hypermoderncpp

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: lib.cpp.1DC8207E6BE2EC7A.idx  lib.cpp.E91DFCC3217762E3.idx  lib.hpp.5FA2809CD57321D2.idx  lib.hpp.C35B56DC60E26228.idx  main.cpp.3D086F02383CF81A.idx  test_catch.cpp.8616D83550FD0CD6.idx  test_gg.cpp.6786FB830EF25127.idx  test_main.cpp.4793B6DDAB7545BE.idx
include/customlib/: lib.hpp
src/: main.cpp
src/customlib/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  test_gg.cpp
